--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.13.1",
     "react-google-autocomplete": "^1.2.6",
     "react-loading-skeleton": "^2.1.1",
+    "react-photoswipe": "^1.3.0",
     "react-quill": "^2.0.0-beta.2",
     "reading-time": "^1.2.1",
     "sass": "^1.26.11"
