--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "16.13.1",
     "react-google-autocomplete": "^1.2.6",
+    "react-inlinesvg": "^2.2.2",
     "react-loading-skeleton": "^2.1.1",
     "react-photoswipe": "^1.3.0",
     "react-quill": "^2.0.0-beta.2",
