--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.3.0",
     "react-cookie": "^4.0.3",
     "react-dom": "16.13.1",
+    "react-ga": "^3.3.0",
     "react-google-autocomplete": "^1.2.6",
     "react-inlinesvg": "^2.2.2",
     "react-loading-skeleton": "^2.1.1",
