--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "react": "16.13.1",
+    "react-adsense": "^0.1.0",
     "react-bootstrap": "^1.3.0",
     "react-cookie": "^4.0.3",
     "react-dom": "16.13.1",
