--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.14.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "google-map-react": "^2.1.6",
     "html-react-parser": "^1.1.0",
+    "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "react": "16.13.1",
@@ -29,8 +30,10 @@
     "react-loading-skeleton": "^2.1.1",
     "react-photoswipe": "^1.3.0",
     "react-quill": "^2.0.0-beta.2",
+    "react-slick": "^0.28.1",
     "reading-time": "^1.2.1",
     "sass": "^1.26.11",
+    "slick-carousel": "^1.8.1",
     "slugify": "^1.4.6",
     "stripe": "^8.147.0"
   },
