Implement SEO panel + header tags for activities and places

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "sass": "^1.26.11",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.4.6",
-    "stripe": "^8.147.0"
+    "stripe": "^8.147.0",
+    "tabler-icons-react": "^1.35.0"
   },
   "devDependencies": {
     "@editorjs/editorjs": "^2.19.1",
