--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.14.0",
+    "@tiptap/extension-image": "^2.0.0-beta.15",
+    "@tiptap/react": "^2.0.0-beta.66",
+    "@tiptap/starter-kit": "^2.0.0-beta.104",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
