--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "16.13.1",
     "react-ga": "^3.3.0",
     "react-google-autocomplete": "^1.2.6",
+    "react-html-parser": "^2.0.2",
     "react-inlinesvg": "^2.2.2",
     "react-loading-skeleton": "^2.1.1",
     "react-photoswipe": "^1.3.0",
