--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "@tiptap/extension-image": "^2.0.0-beta.15",
     "@tiptap/react": "^2.0.0-beta.66",
     "@tiptap/starter-kit": "^2.0.0-beta.104",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "google-map-react": "^2.1.6",
     "html-react-parser": "^1.1.0",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
-    "next": "9.5.3",
-    "react": "16.13.1",
+    "next": "^12.0.0",
+    "react": "^17.0.2",
     "react-adsense": "^0.1.0",
     "react-bootstrap": "^1.3.0",
     "react-cookie": "^4.0.3",
-    "react-dom": "16.13.1",
+    "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-google-autocomplete": "^1.2.6",
     "react-html-parser": "^2.0.2",
@@ -45,6 +45,9 @@
   "devDependencies": {
     "@editorjs/editorjs": "^2.19.1",
     "@editorjs/paragraph": "^2.8.0",
-    "react-editor-js": "^1.7.0"
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.11",
+    "react-editor-js": "^1.7.0",
+    "tailwindcss": "^2.2.17"
   }
 }
