--- a/package.json
+++ b/package.json
@@ -45,9 +45,6 @@
   "devDependencies": {
     "@editorjs/editorjs": "^2.19.1",
     "@editorjs/paragraph": "^2.8.0",
-    "autoprefixer": "^10.3.7",
-    "postcss": "^8.3.11",
-    "react-editor-js": "^1.7.0",
-    "tailwindcss": "^2.2.17"
+    "react-editor-js": "^1.7.0"
   }
 }
