--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "html-react-parser": "^1.1.0",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
-    "next": "9.5.3",
-    "react": "16.13.1",
+    "next": "^12.1.5",
+    "postcss-cli": "^9.1.0",
+    "react": "^18.1.0",
     "react-adsense": "^0.1.0",
     "react-bootstrap": "^1.3.0",
     "react-cookie": "^4.0.3",
-    "react-dom": "16.13.1",
+    "react-dom": "^18.1.0",
     "react-ga": "^3.3.0",
     "react-google-autocomplete": "^1.2.6",
     "react-html-parser": "^2.0.2",
@@ -40,11 +41,14 @@
     "slick-carousel": "^1.8.1",
     "slugify": "^1.4.6",
     "stripe": "^8.147.0",
-    "tabler-icons-react": "^1.35.0"
+    "tabler-icons-react": "^1.35.0",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@editorjs/editorjs": "^2.19.1",
     "@editorjs/paragraph": "^2.8.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.3.11",
     "react-editor-js": "^1.7.0"
   }
 }
