--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "slick-carousel": "^1.8.1",
     "slugify": "^1.4.6",
     "stripe": "^8.147.0",
+    "swiper": "^8.2.4",
     "tabler-icons-react": "^1.35.0",
     "tailwindcss": "^3.0.23"
   },
