--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fancyapps/ui": "^4.0.27",
     "@stripe/stripe-js": "^1.14.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tiptap/extension-image": "^2.0.0-beta.15",
@@ -23,6 +24,7 @@
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "next": "^12.1.5",
+    "next-transpile-modules": "^9.0.0",
     "postcss-cli": "^9.1.0",
     "react": "^18.1.0",
     "react-adsense": "^0.1.0",
