--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@editorjs/editorjs": "^2.19.1",
     "@editorjs/paragraph": "^2.8.0",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.3.11",
     "react-editor-js": "^1.7.0"
