--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "next": "^12.1.5",
     "next-transpile-modules": "^9.0.0",
     "postcss-cli": "^9.1.0",
+    "prosemirror-commands": "^1.5.0",
+    "prosemirror-dropcursor": "^1.5.0",
+    "prosemirror-gapcursor": "^1.3.1",
+    "prosemirror-history": "^1.3.0",
+    "prosemirror-keymap": "^1.2.0",
+    "prosemirror-schema-list": "^1.2.2",
     "react": "^18.1.0",
     "react-adsense": "^0.1.0",
     "react-bootstrap": "^1.3.0",
