--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fancyapps/ui": "^4.0.31",
     "@stripe/stripe-js": "^1.14.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@tiptap/extension-image": "^2.0.0-beta.15",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
