--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@fancyapps/ui": "^4.0.31",
     "@stripe/stripe-js": "^1.14.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tinymce/tinymce-react": "^4.3.0",
-    "@tiptap/extension-image": "^2.0.0-beta.15",
-    "@tiptap/react": "^2.0.0-beta.209",
-    "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "@tiptap/extension-image": "^2.0.0-beta.218",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.218",
+    "@tiptap/pm": "^2.0.0-beta.218",
+    "@tiptap/react": "^2.0.0-beta.218",
+    "@tiptap/starter-kit": "^2.0.0-beta.218",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
@@ -42,6 +43,7 @@
     "react-google-autocomplete": "^1.2.6",
     "react-html-parser": "^2.0.2",
     "react-inlinesvg": "^2.2.2",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.28.1",
     "reading-time": "^1.2.1",
     "sass": "^1.26.11",
