feat: front --> update stores publication layout + implement multiple images selector + implement remove images from list + implement arbitrary images positioning on stories' posts

--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "react-inlinesvg": "^2.2.2",
     "react-quill": "^2.0.0",
     "react-slick": "^0.28.1",
+    "react-sortablejs": "^6.1.4",
     "reading-time": "^1.2.1",
     "sass": "^1.26.11",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.4.6",
+    "sortablejs": "^1.15.0",
     "stripe": "^8.147.0",
     "swiper": "^8.2.4",
     "tabler-icons-react": "^1.35.0",
